--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,5 @@
 @import "bootstrap";
 @import "codemirror";
 @import 'application/margins';
+@import 'application/comments';
 @import 'application/base';
