--- a/app/views/home/main.html.slim
+++ b/app/views/home/main.html.slim
@@ -4,3 +4,8 @@
     | Добро пожалость на сайт simple_gist
     br
     | Делитесь кодом друг с другом =)
+
+h3 Последние записи
+- if @gists.present?
+  - @gists.each do |gist|
+    = render 'gists/gist', gist: gist
