--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -8,10 +8,11 @@ nav.navbar.navbar-inverse.navbar-fixed-top
         span.icon-bar
       = link_to 'Simple Gist', root_path, class: 'navbar-brand'
     #navbar.navbar-collapse.collapse
-      form.navbar-form.navbar-right
+      = form_tag(gists_path, class: 'navbar-form navbar-right', method: :get) do
         .form-group
-          input.form-control placeholder="Search" type="text" /
-        button.btn.btn-success type="submit" Search
+          /input.form-control placeholder="Поиск" type="text" name='search' /
+          = text_field_tag(:search, params[:search], class: 'form-control', placeholder: 'Поиск')
+        button.btn.btn-success type="submit" Найти
         - if current_user.present?
           = link_to current_user.login, user_path(user_login: current_user.login), class: 'white_link ml-10'
           = link_to 'Выйти', destroy_user_session_path, method: :delete, class: 'white_link ml-10'
