--- a/app/views/home/main.html.slim
+++ b/app/views/home/main.html.slim
@@ -1,7 +1,7 @@
 = content_for :jumbotron do
   h2 SimpleGist
   p 
-    | Добро пожалость на сайт simple_gist
+    | Добро пожаловать на сайт simple_gist
     br
     | Делитесь кодом друг с другом =)
 
