--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -26,9 +26,9 @@
 
 h3= t(".cancel_my_account")
 
-p
-  = t("unhappy")
-  br
-  = link_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure") }, method: :delete
+/p
+  /= t("unhappy")
+  /br
+  /= link_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure") }, method: :delete
 
 = link_to t("devise.shared.links.back"), :back
