blocked destroy user link

--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -24,8 +24,7 @@
   .form-actions
     = f.button :submit, t(".update")
 
-h3= t(".cancel_my_account")
-
+/h3= t(".cancel_my_account")
 /p
   /= t("unhappy")
   /br
